feat: 安全加固+性能优化+测试+Swagger文档
安全:
- Admin端点@PreAuthorize权限验证
- 凭证全量改环境变量(application.yml)
- CORS白名单(可配置)
- NSFW审核改fail-close
- VIP/Boost/签到加悲观锁防并发

性能:
- MatchController N+1→批量查询(1+3N→5次)
- 11个数据库性能索引(V11迁移)
- Caffeine本地缓存(VIP状态/礼物列表)
- Feed API支持分页

新增:
- 33个单元测试(VipService/SwipeService/CheckInService/MessageService)
- Swagger/OpenAPI文档(springdoc)
- 全局异常处理器
- .env.example环境变量模板

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>